--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "socket.io": "2.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
